--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -4,6 +4,6 @@ parameters:
 #    parameter_name: value
 
 services:
-#    service_name:
-#        class: AppBundle\Directory\ClassName
-#        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
+  app_response_listener:
+    class: Cerad\Bundle\AppBundle\EventListener\ResponseListener
+    tags: [{ name: kernel.event_subscriber }]
