--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+cerad_auth:
+    resource: "@CeradAuthBundle/Resources/config/routing.yml"
+    prefix:   /
+    
 cerad_person:
     resource: "@CeradPersonBundle/Resources/config/routing.yml"
     prefix:   /
