--- a/src/AuthBundle/Resources/config/services.yml
+++ b/src/AuthBundle/Resources/config/services.yml
@@ -6,10 +6,11 @@ services:
     class: Cerad\Bundle\AuthBundle\OAuth\ProviderManager
     arguments:  
       - '@security.http_utils'
+      - '%cerad_auth__oauth__redirect%'
       - '%cerad_auth__oauth__providers%'
       
   cerad_auth__oauth__controller:
-    class: Cerad\Bundle\AuthBundle\Action\OAuthController
+    class: Cerad\Bundle\AuthBundle\OAuth\OAuthController
     arguments:  
       - '@cerad_auth__oauth__provider_manager'
 
