Added access control to headers. Revamped Referee constructor. Start of OAuth Integeration Working oauth implementation Login form JWT for oauth state

--- a/src/AuthBundle/Resources/config/services.yml
+++ b/src/AuthBundle/Resources/config/services.yml
@@ -8,9 +8,11 @@ services:
       - '@security.http_utils'
       - '%cerad_auth__oauth__redirect%'
       - '%cerad_auth__oauth__providers%'
+      - '%kernel.secret%'
       
   cerad_auth__oauth__controller:
     class: Cerad\Bundle\AuthBundle\OAuth\OAuthController
     arguments:  
       - '@cerad_auth__oauth__provider_manager'
+      - '%kernel.secret%'
 
