--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "sensio/distribution-bundle": "~3.0,>=3.0.12",
         "sensio/framework-extra-bundle": "~3.0,>=3.0.2",
         "incenteev/composer-parameter-handler": "~2.0",
+        "firebase/php-jwt": "*",
         "guzzlehttp/guzzle": "~5.0",
         "guzzlehttp/oauth-subscriber": "0.2.*",
         "phpoffice/phpexcel": "1.8.0"
