--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,8 @@
     "bootstrap": "~3.3.2",
     "html5-boilerplate": "~5.0.0",
     "angular-bootstrap": "~0.12.1",
-    "underscore": "~1.8.2"
+    "underscore": "~1.8.2",
+    "ngstorage": "~0.3.0"
   },
   "resolutions": {
     "angular": "~1.3.14"
