Added access control to headers. Revamped Referee constructor. Start of OAuth Integeration Working oauth implementation Login form JWT for oauth state RefereeRepository changes promises

--- a/src/PersonBundle/Resources/config/routing.yml
+++ b/src/PersonBundle/Resources/config/routing.yml
@@ -12,6 +12,11 @@ cerad_person__referee__update:
   methods:  [PUT]
   defaults: { _controller: CeradPersonBundle:Referee:update }
   
+cerad_person__referee__insert:
+  path:     /referees
+  methods:  [POST]
+  defaults: { _controller: CeradPersonBundle:Referee:insert }
+  
 cerad_person__referee__find_by:
   path:     /referees
   methods:  [GET]
